// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`x-fern-parameter-name x-fern-parameter-name docs 1`] = `
{
  "definitionFiles": {},
  "packageMarkerFile": {
    "service": {
      "auth": false,
      "base-path": "",
      "endpoints": {
        "get_user": {
          "auth": false,
          "docs": undefined,
          "examples": [
            {
              "headers": {
                "X-API-Version": "X-API-Version",
              },
              "query-parameters": {
                "foo": "foo",
              },
              "response": {
                "body": "string",
              },
            },
          ],
          "method": "GET",
          "pagination": undefined,
          "path": "/user",
          "request": {
            "headers": {
              "X-API-Version": {
                "name": "version",
                "type": "string",
              },
            },
            "name": "GetUserRequest",
            "query-parameters": {
              "foo": {
                "name": "bar",
                "type": "string",
              },
            },
          },
          "response": {
            "docs": "Success!",
            "type": "string",
          },
        },
      },
    },
  },
  "rootApiFile": {
    "display-name": "Test extension \`x-fern-parameter-name\` for parameters.",
    "error-discrimination": {
      "strategy": "status-code",
    },
    "name": "api",
  },
}
`;

exports[`x-fern-parameter-name x-fern-parameter-name simple 1`] = `
{
  "definitionFiles": {},
  "packageMarkerFile": {
    "service": {
      "auth": false,
      "base-path": "",
      "endpoints": {
        "get_user": {
          "auth": false,
          "docs": undefined,
          "examples": [
            {
              "headers": {},
              "query-parameters": {
                "foo": "foo",
              },
              "response": {
                "body": "string",
              },
            },
          ],
          "method": "GET",
          "pagination": undefined,
          "path": "/user",
          "request": {
            "name": "GetUserRequest",
            "query-parameters": {
              "foo": {
                "name": "bar",
                "type": "string",
              },
            },
          },
          "response": {
            "docs": "Success!",
            "type": "string",
          },
        },
      },
    },
  },
  "rootApiFile": {
    "display-name": "Test extension \`x-fern-parameter-name\` for parameters.",
    "error-discrimination": {
      "strategy": "status-code",
    },
    "headers": {
      "X-API-Version": {
        "name": "version",
        "type": "string",
      },
    },
    "name": "api",
  },
}
`;
